[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flow_drive"
version = "1.0.0"
description = ""
requires-python = ">=3.9"
authors = [
    { name = "anonymous" }
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: Free for non-commercial use"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flow_drive*"]

